Backport bugfixes from eclipse pde and add servlet 4.0 api support