@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2008, 2012 IBM Corporation and others.
+ * Copyright (c) 2008, 2017 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -26,7 +26,7 @@ public class RegistryModel {
 			adapter.setModel(RegistryModel.this);
 			ModelChangeDelta delta = new ModelChangeDelta(adapter, ModelChangeDelta.ADDED);
 
-			bundles.put(new Long(adapter.getId()), adapter);
+			bundles.put(Long.valueOf(adapter.getId()), adapter);
 
 			if (adapter.getFragmentHost() != null) {
 				addFragment(adapter);
@@ -46,7 +46,7 @@ public class RegistryModel {
 		public void removeBundle(Bundle adapter) {
 			ModelChangeDelta delta = new ModelChangeDelta(adapter, ModelChangeDelta.REMOVED);
 
-			bundles.remove(new Long(adapter.getId()));
+			bundles.remove(Long.valueOf(adapter.getId()));
 
 			if (adapter.getFragmentHost() != null) {
 				removeFragment(adapter);
@@ -68,7 +68,7 @@ public class RegistryModel {
 			adapter.setModel(RegistryModel.this);
 			ModelChangeDelta delta = new ModelChangeDelta(adapter, updated);
 
-			bundles.put(new Long(adapter.getId()), adapter); // replace old with new one
+			bundles.put(Long.valueOf(adapter.getId()), adapter); // replace old with new one
 
 			if (adapter.getFragmentHost() != null) {
 				addFragment(adapter);
@@ -90,7 +90,7 @@ public class RegistryModel {
 			}
 
 			adapter.setModel(RegistryModel.this);
-			services.put(new Long(adapter.getId()), adapter);
+			services.put(Long.valueOf(adapter.getId()), adapter);
 
 			ModelChangeDelta delta = new ModelChangeDelta(adapter, ModelChangeDelta.ADDED);
 
@@ -109,7 +109,7 @@ public class RegistryModel {
 				serviceNameDelta = new ModelChangeDelta(adapter.getName(), ModelChangeDelta.REMOVED);
 			}
 
-			services.remove(new Long(adapter.getId()));
+			services.remove(Long.valueOf(adapter.getId()));
 
 			ModelChangeDelta delta = new ModelChangeDelta(adapter, ModelChangeDelta.REMOVED);
 
@@ -126,7 +126,7 @@ public class RegistryModel {
 		@Override
 		public void updateService(ServiceRegistration adapter) {
 			adapter.setModel(RegistryModel.this);
-			services.put(new Long(adapter.getId()), adapter);
+			services.put(Long.valueOf(adapter.getId()), adapter);
 
 			ModelChangeDelta delta = new ModelChangeDelta(adapter, ModelChangeDelta.UPDATED);
 
@@ -135,11 +135,11 @@ public class RegistryModel {
 
 		@Override
 		public void addExtensions(Extension[] extensionAdapters) {
-			for (int i = 0; i < extensionAdapters.length; i++) {
-				extensionAdapters[i].setModel(RegistryModel.this);
-				String id = extensionAdapters[i].getExtensionPointUniqueIdentifier();
-				ExtensionPoint extPoint = (ExtensionPoint) extensionPoints.get(id);
-				extPoint.getExtensions().add(extensionAdapters[i]);
+			for (Extension extension : extensionAdapters) {
+				extension.setModel(RegistryModel.this);
+				String id = extension.getExtensionPointUniqueIdentifier();
+				ExtensionPoint extPoint = extensionPoints.get(id);
+				extPoint.getExtensions().add(extension);
 			}
 
 			ModelChangeDelta[] delta = new ModelChangeDelta[extensionAdapters.length];
@@ -151,10 +151,10 @@ public class RegistryModel {
 
 		@Override
 		public void removeExtensions(Extension[] extensionAdapters) {
-			for (int i = 0; i < extensionAdapters.length; i++) {
-				String id = extensionAdapters[i].getExtensionPointUniqueIdentifier();
-				ExtensionPoint extPoint = (ExtensionPoint) extensionPoints.get(id);
-				extPoint.getExtensions().remove(extensionAdapters[i]);
+			for (Extension extension : extensionAdapters) {
+				String id = extension.getExtensionPointUniqueIdentifier();
+				ExtensionPoint extPoint = extensionPoints.get(id);
+				extPoint.getExtensions().remove(extension);
 			}
 
 			ModelChangeDelta[] delta = new ModelChangeDelta[extensionAdapters.length];
@@ -163,16 +163,16 @@ public class RegistryModel {
 			}
 			fireModelChangeEvent(delta);
 
-			for (int i = 0; i < extensionAdapters.length; i++) {
-				extensionAdapters[i].setModel(null);
+			for (Extension extension : extensionAdapters) {
+				extension.setModel(null);
 			}
 		}
 
 		@Override
 		public void addExtensionPoints(ExtensionPoint[] extensionPointAdapters) {
-			for (int i = 0; i < extensionPointAdapters.length; i++) {
-				extensionPointAdapters[i].setModel(RegistryModel.this);
-				extensionPoints.put(extensionPointAdapters[i].getUniqueIdentifier(), extensionPointAdapters[i]);
+			for (ExtensionPoint extPoint : extensionPointAdapters) {
+				extPoint.setModel(RegistryModel.this);
+				extensionPoints.put(extPoint.getUniqueIdentifier(), extPoint);
 			}
 
 			ModelChangeDelta[] delta = new ModelChangeDelta[extensionPointAdapters.length];
@@ -184,8 +184,8 @@ public class RegistryModel {
 
 		@Override
 		public void removeExtensionPoints(ExtensionPoint[] extensionPointAdapters) {
-			for (int i = 0; i < extensionPointAdapters.length; i++) {
-				extensionPoints.remove(extensionPointAdapters[i].getUniqueIdentifier());
+			for (ExtensionPoint extPoint : extensionPointAdapters) {
+				extensionPoints.remove(extPoint.getUniqueIdentifier());
 			}
 
 			ModelChangeDelta[] delta = new ModelChangeDelta[extensionPointAdapters.length];
@@ -194,36 +194,36 @@ public class RegistryModel {
 			}
 			fireModelChangeEvent(delta);
 
-			for (int i = 0; i < extensionPointAdapters.length; i++) {
-				extensionPointAdapters[i].setModel(null);
+			for (ExtensionPoint extPoint : extensionPointAdapters) {
+				extPoint.setModel(null);
 			}
 		}
 	};
 
-	private List listeners = new ArrayList();
-	private Map bundles;
-	private Map services;
-	private Map extensionPoints;
-	private Set serviceNames;
-	private Map fragments;
+	private List<ModelChangeListener> listeners = new ArrayList<>();
+	private Map<Long, Bundle> bundles;
+	private Map<Long, ServiceRegistration> services;
+	private Map<String, ExtensionPoint> extensionPoints;
+	private Set<ServiceName> serviceNames;
+	private Map<String, Set<Bundle>> fragments;
 
 	protected RegistryBackend backend;
 
 	public RegistryModel(RegistryBackend backend) {
-		bundles = Collections.synchronizedMap(new HashMap());
-		services = Collections.synchronizedMap(new HashMap());
-		extensionPoints = Collections.synchronizedMap(new HashMap());
-		serviceNames = Collections.synchronizedSet(new HashSet());
-		fragments = Collections.synchronizedMap(new HashMap());
+		bundles = Collections.synchronizedMap(new HashMap<>());
+		services = Collections.synchronizedMap(new HashMap<>());
+		extensionPoints = Collections.synchronizedMap(new HashMap<>());
+		serviceNames = Collections.synchronizedSet(new HashSet<>());
+		fragments = Collections.synchronizedMap(new HashMap<>());
 
 		this.backend = backend;
 		backend.setRegistryListener(backendListener);
 	}
 
 	protected void addFragment(Bundle fragment) {
-		Set hostFragments = (Set) fragments.get(fragment.getFragmentHost());
+		Set<Bundle> hostFragments = fragments.get(fragment.getFragmentHost());
 		if (hostFragments == null) {
-			hostFragments = Collections.synchronizedSet(new HashSet());
+			hostFragments = Collections.synchronizedSet(new HashSet<>());
 			fragments.put(fragment.getFragmentHost(), hostFragments);
 		}
 
@@ -235,7 +235,7 @@ public class RegistryModel {
 	}
 
 	protected void removeFragment(Bundle fragment) {
-		Set hostFragments = (Set) fragments.get(fragment.getFragmentHost());
+		Set<Bundle> hostFragments = fragments.get(fragment.getFragmentHost());
 		if (hostFragments == null) {
 			return;
 		}
@@ -262,33 +262,33 @@ public class RegistryModel {
 	}
 
 	public Bundle[] getBundles() {
-		return (Bundle[]) bundles.values().toArray(new Bundle[bundles.values().size()]);
+		return bundles.values().toArray(new Bundle[bundles.values().size()]);
 	}
 
 	public ExtensionPoint[] getExtensionPoints() {
-		return (ExtensionPoint[]) extensionPoints.values().toArray(new ExtensionPoint[extensionPoints.values().size()]);
+		return extensionPoints.values().toArray(new ExtensionPoint[extensionPoints.values().size()]);
 	}
 
 	public ServiceRegistration[] getServices() {
-		return (ServiceRegistration[]) services.values().toArray(new ServiceRegistration[services.values().size()]);
+		return services.values().toArray(new ServiceRegistration[services.values().size()]);
 	}
 
 	public ServiceName[] getServiceNames() {
-		return (ServiceName[]) serviceNames.toArray(new ServiceName[serviceNames.size()]);
+		return serviceNames.toArray(new ServiceName[serviceNames.size()]);
 	}
 
 	public ServiceRegistration[] getServices(String[] classes) {
-		List result = new ArrayList();
+		List<ServiceRegistration> result = new ArrayList<>();
 
 		synchronized (services) {
-			for (Iterator i = services.values().iterator(); i.hasNext();) {
-				ServiceRegistration sr = (ServiceRegistration) i.next();
+			for (Iterator<ServiceRegistration> i = services.values().iterator(); i.hasNext();) {
+				ServiceRegistration sr = i.next();
 				if (Arrays.equals(classes, sr.getName().getClasses()))
 					result.add(sr);
 			}
 		}
 
-		return (ServiceRegistration[]) result.toArray(new ServiceRegistration[result.size()]);
+		return result.toArray(new ServiceRegistration[result.size()]);
 	}
 
 	public void addModelChangeListener(ModelChangeListener listener) {
@@ -306,20 +306,20 @@ public class RegistryModel {
 	 * @param objects
 	 */
 	protected void fireModelChangeEvent(ModelChangeDelta[] delta) {
-		for (Iterator i = listeners.iterator(); i.hasNext();) {
-			ModelChangeListener listener = (ModelChangeListener) i.next();
+		for (Iterator<ModelChangeListener> i = listeners.iterator(); i.hasNext();) {
+			ModelChangeListener listener = i.next();
 			listener.modelChanged(delta);
 		}
 	}
 
 	public Bundle getBundle(Long id) {
-		return (Bundle) bundles.get(id);
+		return bundles.get(id);
 	}
 
 	public Bundle getBundle(String symbolicName, String versionRange) {
 		synchronized (bundles) {
-			for (Iterator i = bundles.values().iterator(); i.hasNext();) {
-				Bundle bundle = (Bundle) i.next();
+			for (Iterator<Bundle> i = bundles.values().iterator(); i.hasNext();) {
+				Bundle bundle = i.next();
 
 				if (bundle.getSymbolicName().equals(symbolicName)) {
 					if (versionMatches(bundle.getVersion(), versionRange))
@@ -332,25 +332,25 @@ public class RegistryModel {
 	}
 
 	public ExtensionPoint getExtensionPoint(String extensionPointUniqueIdentifier) {
-		return (ExtensionPoint) extensionPoints.get(extensionPointUniqueIdentifier);
+		return extensionPoints.get(extensionPointUniqueIdentifier);
 	}
 
 	public Bundle[] getFragments(Bundle bundle) {
-		Set set = (Set) fragments.get(bundle.getSymbolicName());
+		Set<Bundle> set = fragments.get(bundle.getSymbolicName());
 		if (set == null)
 			return new Bundle[0];
 
-		List result = new ArrayList(set.size());
+		List<Bundle> result = new ArrayList<>(set.size());
 		Version hostVersion = Version.parseVersion(bundle.getVersion());
-		for (Iterator i = set.iterator(); i.hasNext();) {
-			Bundle fragment = (Bundle) i.next();
+		for (Iterator<Bundle> i = set.iterator(); i.hasNext();) {
+			Bundle fragment = i.next();
 			String fragmentVersionOrRange = fragment.getFragmentHostVersion();
 
 			if (versionMatches(hostVersion, fragmentVersionOrRange))
 				result.add(fragment);
 		}
 
-		return (Bundle[]) result.toArray(new Bundle[result.size()]);
+		return result.toArray(new Bundle[result.size()]);
 	}
 
 	private boolean versionMatches(String hostVersion, String versionOrRange) {
